azure-webapi-ingress-agic.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: azure-webapi
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway  
spec:
  ingressClassName: azure-application-gateway
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: azure-webapi
            port:
              number: 8080
        pathType: Prefix
---
